--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,8 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <img class="portait" src="/img/pic1.jpg">
+            <p>This site was created by MasterJ. It uses data from weather stack and mapbox.</p>
+            <img class="portait" src="/img/me.jpg">
         </div>
         
         {{>footer}}
